
2007-07-22  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Work version is 0.11.2

2007-07-22  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.11.1

2007-07-22  Roland Clobus <rclobus@bigfoot.com>
	* pioneers.spec.in: Updated. It works for openSUSE 10.2.
	* server/gtk/main.c: Cosmetic changes.
	* server/server.c, server/server.h, server/admin.c, server/admin.h:
	Added 'send-message', 'help', 'info' to the admin commands.
	The addition of 'send-message' is based on a patch by David Hall
	<hacking@gringer.dis.org.nz>
	* common/gtk/theme.c: The default theme is now 'Tiny'.
	* common/gtk/guimap.c: Use the full size for the map. The font size in
	the server was effectively always 1pt.
	* pioneers.nsi.in: Added Afrikaans and Japanese.
	* pioneers.nsi.in: Added style-*.png
	* client/ai/computer_names: Corrected spelling of 'Gödel'
	* README, NEWS: Updated for 0.11.1
	* client/gtk/data/splash.svg: Updated to 0.11
	* client/ai/lobbybot.c: Updated to 0.11

2007-07-21  Roland Clobus <rclobus@bigfoot.com>
	* server/server.h: Added robber undo in 0.11 change list.

2007-07-21  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/player-icon.c, common/gtk/player-icon.h,
	common/gtk/Makefile.am, server/player.c, server/server.h,
	server/pregame.c, client/callback.h, client/gtk/callbacks.c,
	client/gtk/name.c, client/gtk/frontend.h, client/gtk/data/Makefile.am,
	client/gtk/player.c, client/gtk/quote-view.c, client/gtk/chat.c,
	client/gtk/offline.c, client/gtk/connect.c, client/common/client.c,
	client/common/client.h, client/common/callback.c,
	client/common/player.c, client/ai/ai.c: Added a customizable player
	icon. Based on a patch by Giancarlo Capella <giancarlo@comm.cc>.

2007-07-21  Bas Wijnen <shevek@fmf.nl>
	* common/map.c, server/player.c, server/robber.c, server/server.h,
	client/callback.h, client/gtk/interface.c, client/gtk/callbacks.c,
	client/gtk/frontend.h, client/common/client.c, client/common/client.h,